--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -60,24 +60,6 @@ policies:
     path_re_match: 'ALL'
     method: ANY
     env:
-      - VES_IO_SITENAME: ves-io-wes-sea
-    env_policy_match: AND
-    headers: []
-    header_policy_match: AND
-    ip_version: 4
-    reply_scripts:
-      - delay_ms: 0
-        repeat: 0
-        action: direct_response
-        direct_response_status_code: 200
-        direct_response_mime_type: 'application/json'
-        direct_response_body: '{"method":"get","config":"seattle_service"}'
-        direct_response_body_encoding: NONE
-  - id: 4
-    src_cidr:  'ALL'
-    path_re_match: 'ALL'
-    method: ANY
-    env:
       - VES_IO_SITENAME: ves-io-sg3-sin
     env_policy_match: AND
     headers: []
@@ -89,9 +71,9 @@ policies:
         action: direct_response
         direct_response_status_code: 200
         direct_response_mime_type: 'application/json'
-        direct_response_body: '{"method":"get","config":"singapore_service}'
+        direct_response_body: '{"method":"get","config":"singapore_service"}'
         direct_response_body_encoding: NONE
-  - id: 5
+  - id: 4
     src_cidr:  'ALL'
     path_re_match: 'ALL'
     method: ANY
