--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -48,12 +48,12 @@ policies:
     header_policy_match: AND
     ip_version: 4
     reply_scripts:
-      - delay_ms: 0
+      - delay_ms: 2000
         repeat: 0
         action: direct_response
         direct_response_status_code: 200
         direct_response_mime_type: 'application/json'
-        direct_response_body: '{"method":"get","config":"dallas_service"}'
+        direct_response_body: '{"method":"get","config":"dallas_service","test":1}'
         direct_response_body_encoding: NONE
   - id: 3
     src_cidr:  'ALL'
