--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -344,6 +344,23 @@ policies:
         direct_response_body: '{"method":"get","config":"paris_service"}'
         direct_response_body_encoding: NONE
   - id: 19
+    src_cidr:  '18.224.176.13/24'
+    path_re_match: 'ALL'
+    method: ANY
+    env: []
+    env_policy_match: AND
+    headers: []
+    header_policy_match: AND
+    ip_version: 4
+    reply_scripts:
+      - delay_ms: 3000
+        repeat: 0
+        action: direct_response
+        direct_response_status_code: 200
+        direct_response_mime_type: 'application/json'
+        direct_response_body: '{"method":"get","config":"us-east-slow"}'
+        direct_response_body_encoding: NONE
+  - id: 20
     src_cidr:  'ALL'
     path_re_match: 'ALL'
     method: ANY
