--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -53,7 +53,7 @@ policies:
         action: direct_response
         direct_response_status_code: 200
         direct_response_mime_type: 'application/json'
-        direct_response_body: '{"method":"get","config":"dallas_service"}'
+        direct_response_body: '{"method":"get","config":"dallas_services"}'
         direct_response_body_encoding: NONE
   - id: 3
     src_cidr:  'ALL'
@@ -161,7 +161,7 @@ policies:
         action: direct_response
         direct_response_status_code: 200
         direct_response_mime_type: 'application/json'
-        direct_response_body: '{"method":"get","config":"newyork_service"}'
+        direct_response_body: '{"method":"get","config":"newyork_services"}'
         direct_response_body_encoding: NONE
   - id: 9
     src_cidr:  'ALL'
