--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -349,8 +349,9 @@ policies:
     method: ANY
     env: []
     env_policy_match: AND
-    headers: []
-    header_policy_match: AND
+    headers:
+      - c-client: '162.220.44.18'
+    header_policy_match: OR
     ip_version: 4
     reply_scripts:
       - delay_ms: 3000
