--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -350,7 +350,7 @@ policies:
     env: []
     env_policy_match: AND
     headers:
-      - c-client: '162.220.44.18'
+      - xc-client: '162.220.44.18'
     header_policy_match: OR
     ip_version: 4
     reply_scripts:
