--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -347,13 +347,14 @@ policies:
     src_cidr:  '52.52.219.220/32'
     path_re_match: 'ALL'
     method: ANY
-    env: []
+    env:
+      - VES_IO_SITENAME: ves-io-sv10-sjc
     env_policy_match: AND
     headers: [] # - xc-client: '162.220.44.18'
     header_policy_match: OR
     ip_version: 4
     reply_scripts:
-      - delay_ms: 1000
+      - delay_ms: 2000
         repeat: 0
         action: direct_response
         direct_response_status_code: 200
