--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -24,6 +24,25 @@ policies:
   src_cidr: ALL
   path_re_match: ALL
   method: ANY
+  env:
+  - VES_IO_SITENAME: ves-io-sv10-sjc
+  env_policy_match: AND
+  headers: []
+  header_policy_match: AND
+  ip_version: 4
+  reply_scripts:
+  - delay_ms: 500
+    repeat: 0
+    action: direct_response
+    direct_response_status_code: 200
+    direct_response_mime_type: application/json
+    direct_response_body: '{"method":"get","config":"seattle_service"}'
+    direct_response_body_encoding: NONE
+  repeated: {}
+- id: 2
+  src_cidr: ALL
+  path_re_match: ALL
+  method: ANY
   env: []
   env_policy_match: AND
   headers: []
@@ -38,3 +57,4 @@ policies:
     direct_response_body: '{"method":"get","config":"global_generic_service"}'
     direct_response_body_encoding: NONE
   repeated: {}
+  
