--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -36,7 +36,7 @@ policies:
     action: direct_response
     direct_response_status_code: 200
     direct_response_mime_type: application/json
-    direct_response_body: '{"method":"get","config":"seattle_service"}'
+    direct_response_body: '{"method":"get","config":"sjc_service"}'
     direct_response_body_encoding: NONE
   repeated: {}
 - id: 2
