--- a/configs/global-config.yaml
+++ b/configs/global-config.yaml
@@ -5,6 +5,24 @@ policies:
   src_cidr: ALL
   path_re_match: ALL
   method: ANY
+  env: []
+  env_policy_match: AND
+  headers: []
+  header_policy_match: AND
+  ip_version: 4
+  reply_scripts:
+  - delay_ms: 0
+    repeat: 0
+    action: direct_response
+    direct_response_status_code: 200
+    direct_response_mime_type: application/json
+    direct_response_body: '{"method":"get","config":"global_generic_service"}'
+    direct_response_body_encoding: NONE
+  repeated: {}
+- id: 1
+  src_cidr: ALL
+  path_re_match: ALL
+  method: ANY
   env:
   - VES_IO_SITENAME: ves-io-sv10-sjc
   env_policy_match: AND
@@ -20,22 +38,27 @@ policies:
     direct_response_body: '{"method":"get","config":"sjc_service"}'
     direct_response_body_encoding: NONE
   repeated: {}
-- id: 1
+- id: 2
   src_cidr: ALL
   path_re_match: ALL
   method: ANY
-  env: []
+  env:
+  - VES_IO_SITENAME: ves-io-sv10-sjc
   env_policy_match: AND
   headers: []
   header_policy_match: AND
   ip_version: 4
+  day_of_week: F
+  start_time: 03:30:00
+  stop_time: 04:00:00
   reply_scripts:
   - delay_ms: 0
     repeat: 0
     action: direct_response
-    direct_response_status_code: 200
+    direct_response_status_code: 500
     direct_response_mime_type: application/json
-    direct_response_body: '{"method":"get","config":"global_generic_service"}'
+    direct_response_body: '{"method":"get","config":"sjc_service"}'
     direct_response_body_encoding: NONE
   repeated: {}
+
   
