--- a/config/payroll.conf
+++ b/config/payroll.conf
@@ -30,8 +30,15 @@ policies:
   header_policy_match: AND
   ip_version: 4
   reply_scripts:
+  - delay_ms: 0
+    repeat: 440
+    action: direct_response
+    direct_response_status_code: 200
+    direct_response_mime_type: application/json
+    direct_response_body: '{"method":"get","config":"sjc_service"}'
+    direct_response_body_encoding: NONE
   - delay_ms: 700
-    repeat: 0
+    repeat: 40
     action: direct_response
     direct_response_status_code: 500
     direct_response_mime_type: application/json
